// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header menu test Should hide menu should match snapshot 1`] = `
<div>
  <div
    class="App-header"
  >
    <span>
      Execution Report
    </span>
  </div>
</div>
`;

exports[`Should match snapshot 1`] = `
<div
  class="App-header"
>
  <input
    id="menu"
    type="checkbox"
  />
  <label
    class="icon"
    for="menu"
  >
    <div
      class="menu"
    />
  </label>
  <span>
    Test Heading
  </span>
</div>
`;
